--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -96,7 +96,7 @@
                     </div>
                 </div>
                 <div class="col-7 col-md-2 offset-md-5">
-                    <select id="" class="form-control form-inline">
+                    <select id="" class="form-control form-inline form-control-sm">
                         <option selected="">가격순</option>
                         <option>이름순</option>
                     </select>
@@ -110,229 +110,149 @@
 
             <!--상품 리스트 -->
             <div class="card-deck d-block d-lg-flex">
-                <article class="card border-0 mb-2">
-                    <a href="product" class="text-dark">
-                        <div class="card-body row align-items-stretch no-gutters p-0">
-                            <!-- News Blog Card -->
+                <article class="card border-0 mb-2 ">
+                        <div class="min-height-pl card-body row align-items-stretch no-gutters p-0">
                             <div class="col-4 col-sm-3 card-img-left border border-right-0 bg-img-hero" th:attr="data-bg-img-src=@{/img/test/10_0l.jpg}"></div>
                             <div class="col-8 col-sm-9 border border-left-0 rounded-right">
-                                <div class="p-5">
-                                    <h2 class="h5 mb-3">
-                                        참좋은계란 대란 30구 5판
-                                    </h2>
-                                    <p class="mb-0">5판 35000 100판 34000</p>
+                                <div class="p-3">
+                                    <span class="d-block">
+                                        <a href="product" class="text-dark">
+                                        <strong>참좋은계란 대란 30구</strong> <span class="badge badge-pill badge-danger">best</span>
+                                        </a>
+                                    </span>
+                                    <strong class="text-danger">4,500원</strong> <del class="small">5,000원</del>
+                                    <div class="small">코리아에그</div>
+                                    <div class="small">5~5000판 / 전국</div>
+                                    <div class="small">2019.12.31까지</div>
                                 </div>
                             </div>
                         </div>
-                    </a>
-                    <!-- End News Blog Card -->
                 </article>
-                <article class="card border-0 mb-2">
-                    <a href="product" class="text-dark">
-
-                        <div class="card-body row align-items-stretch no-gutters p-0">
-                            <!-- News Blog Card -->
-                            <div class="col-4 col-sm-3 card-img-left border border-right-0 bg-img-hero" th:attr="data-bg-img-src=@{/img/test/9_0l.jpg}"></div>
+                <article class="card border-0 mb-2 ">
+                        <div class="min-height-pl card-body row align-items-stretch no-gutters p-0">
+                            <div class="col-4 col-sm-3 card-img-left border border-right-0 bg-img-hero" th:attr="data-bg-img-src=@{/img/test/10_0l.jpg}"></div>
                             <div class="col-8 col-sm-9 border border-left-0 rounded-right">
-                                <div class="p-5">
-                                    <h2 class="h5 mb-3">
-                                        참좋은계란 대란 30구 5판
-                                    </h2>
-                                    <p class="mb-0">100판 얼마 1000판 얼마 배송지역 어디</p>
+                                <div class="p-3">
+                                    <span class="d-block">
+                                        <a href="product" class="text-dark">
+                                        <strong>참좋은계란 대란 30구</strong> <span class="badge badge-pill badge-danger">best</span>
+                                        </a>
+                                    </span>
+                                    <strong class="text-danger">4,500원</strong> <del class="small">5,000원</del>
+                                    <div class="small">코리아에그</div>
+                                    <div class="small">5~5000판 / 전국</div>
+                                    <div class="small">2019.12.31까지</div>
                                 </div>
                             </div>
                         </div>
-                    </a>
-                    <!-- End News Blog Card -->
-                </article>
-            </div>
-            <div class="card-deck d-block d-lg-flex">
-                <article class="card border-0 mb-2">
-                    <a href="product" class="text-dark">
-                        <div class="card-body row align-items-stretch no-gutters p-0">
-                            <!-- News Blog Card -->
-                            <div class="col-4 col-sm-3 card-img-left border border-right-0 bg-img-hero" th:attr="data-bg-img-src=@{/img/test/7_0l.jpg}"></div>
-                            <div class="col-8 col-sm-9 border border-left-0 rounded-right">
-                                <div class="p-5">
-                                    <h2 class="h5 mb-3">
-                                        참좋은계란 명품란 10구 4팩
-                                    </h2>
-                                    <p class="mb-0">100판 얼마 1000판 얼마 배송지역 어디</p>
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                    <!-- End News Blog Card -->
-                </article>
-                <article class="card border-0 mb-2">
-                    <a href="product" class="text-dark">
-
-                        <div class="card-body row align-items-stretch no-gutters p-0">
-                            <!-- News Blog Card -->
-                            <div class="col-4 col-sm-3 card-img-left border border-right-0 bg-img-hero" th:attr="data-bg-img-src=@{/img/test/6_0l.jpg}"></div>
-                            <div class="col-8 col-sm-9 border border-left-0 rounded-right">
-                                <div class="p-5">
-                                    <h2 class="h5 mb-3">
-                                        참좋은계란
-                                    </h2>
-                                    <p class="mb-0">100판 얼마 1000판 얼마 배송지역 어디</p>
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                    <!-- End News Blog Card -->
-                </article>
-            </div>
-            <div class="card-deck d-block d-lg-flex">
-                <article class="card border-0 mb-2">
-                    <a href="product" class="text-dark">
-                        <div class="card-body row align-items-stretch no-gutters p-0">
-                            <!-- News Blog Card -->
-                            <div class="col-4 col-sm-3 card-img-left border border-right-0 bg-img-hero" th:attr="data-bg-img-src=@{/img/test/img4.jpg}"></div>
-                            <div class="col-8 col-sm-9 border border-left-0 rounded-right">
-                                <div class="p-5">
-                                    <h2 class="h5 mb-3">
-                                        참좋은계란
-                                    </h2>
-                                    <p class="mb-0">100판 얼마 1000판 얼마 배송지역 어디</p>
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                    <!-- End News Blog Card -->
-                </article>
-                <article class="card border-0 mb-2">
-                    <a href="product" class="text-dark">
-                        <div class="card-body row align-items-stretch no-gutters p-0">
-                            <!-- News Blog Card -->
-                            <div class="col-4 col-sm-3 card-img-left border border-right-0 bg-img-hero" th:attr="data-bg-img-src=@{/img/test/img4.jpg}"></div>
-                            <div class="col-8 col-sm-9 border border-left-0 rounded-right">
-                                <div class="p-5">
-                                    <h2 class="h5 mb-3">
-                                        참좋은계란
-                                    </h2>
-                                    <p class="mb-0">100판 얼마 1000판 얼마 배송지역 어디</p>
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                    <!-- End News Blog Card -->
                 </article>
             </div>
 
-            <!-- 대리점 line-->
-            <div class="mt-5">
-                <div class="media align-items-center pr-lg-4">
-                    <img class="max-width-6 mr-1" th:src="@{svg/business-icons/iStar_Design_Business_LineIcons_Live-98.svg}" alt="Image Description"/>
+            <div class="row mt-5">
+                <div class="media align-items-center pr-lg-4 col-7">
+                    <img class="max-width-6 mr-1" th:src="@{/svg/business-icons/iStar_Design_Business_LineIcons_Live-98.svg}" alt="Image Description"/>
                     <div class="media-body">
-                        <p class="h4 mb-0">대리점</p>
+                        <p class="h4 mb-0">대리점 <span class="font-size-13 text-muted"> * 검색위치에서 직선거리로 정렬됩니다</span></p>
                     </div>
                 </div>
-                <hr class="my-2">
+                <div class="col-5 col-md-2 offset-md-3 text-right">
+                    <a href="/agentList">자세히 보기</a>
+                </div>
             </div>
+            <hr class="my-2">
 
             <!-- 대리점 리스트 -->
             <div class="card-deck d-block d-lg-flex">
-                <article class="card border-0 mb-2">
-                    <a href="agent" class="text-dark">
-                        <div class="card-body row align-items-stretch no-gutters p-0">
-                            <!-- News Blog Card -->
-                            <div class="col-8 border border-right-0 ">
-                                <h2 class="h6">대리점1</h2>
-                                <address class="mb-0">
-                                    <ul class="list-unstyled font-size-14 text-secondary mb-0">
-                                        <li class="py-1">서울 동대문구 이문동 204-397</li>
-                                        <li class="py-2">취급품목:왕란 대란 소란</li>
-                                        <li class="py-1">(02) 347 8854</li>
-                                    </ul>
-                                </address>
-                            </div>
-                            <div class="col-4 border border-left-0 rounded-right">
-                                <div id="map" class="js-g-map h-100"></div>
+                <article class="card border-0 mb-2 ">
+                    <div class="min-height-pl card-body row align-items-stretch no-gutters p-0">
+                        <div class="col-8 col-sm-9 border border-right-0 rounded-left">
+                            <div class="p-3">
+                                    <span class="d-block">
+                                        <a href="/agent" class="text-dark">
+                                        <strong>서울 대리점</strong>
+                                        </a>
+                                    </span>
+                                <div class="small">서울 동대문구 이문동 204-397</div>
+                                <div class="small">02-657-8454</div>
+                                <div class="small text-danger">20km <span class="text-dark">왕란 외 2건</span></div>
                             </div>
                         </div>
-                    </a>
-                    <!-- End News Blog Card -->
+                        <div class="col-4 col-sm-3 card-img-right border border-left-0 bg-img-hero" th:attr="data-bg-img-src=@{/img/test/10_0l.jpg}"></div>
+                    </div>
                 </article>
-                <article class="card border-0 mb-2">
-                    <a href="agent" class="text-dark">
-                        <div class="card-body row align-items-stretch no-gutters p-0">
-                            <!-- News Blog Card -->
-                            <div class="col-8 border border-right-0 ">
-                                <h2 class="h6">대리점1</h2>
-                                <address class="mb-0">
-                                    <ul class="list-unstyled font-size-14 text-secondary mb-0">
-                                        <li class="py-1">서울 동대문구 이문동 204-397</li>
-                                        <li class="py-2">취급품목:왕란 대란 소란</li>
-                                        <li class="py-1">(02) 347 8854</li>
-                                    </ul>
-                                </address>
-                            </div>
-                            <div class="col-4 border border-left-0 rounded-right">
-                                가게 간판? 가게전경?
+                <article class="card border-0 mb-2 ">
+                    <div class="min-height-pl card-body row align-items-stretch no-gutters p-0">
+                        <div class="col-8 col-sm-9 border border-right-0 rounded-left">
+                            <div class="p-3">
+                                    <span class="d-block">
+                                        <a href="/agent" class="text-dark">
+                                        <strong>서울 대리점</strong>
+                                        </a>
+                                    </span>
+                                <div class="small">서울 동대문구 이문동 204-397</div>
+                                <div class="small">02-657-8454</div>
+                                <div class="small text-danger">20km <span class="text-dark">왕란 외 2건</span></div>
                             </div>
                         </div>
-                    </a>
-                    <!-- End News Blog Card -->
+                        <div class="col-4 col-sm-3 card-img-right border border-left-0 bg-img-hero" th:attr="data-bg-img-src=@{/img/test/10_0l.jpg}"></div>
+                    </div>
                 </article>
             </div>
 
             <!-- 협력사 line -->
-            <div class="mt-5">
-                <div class="media align-items-center pr-lg-4">
+            <div class="row mt-5">
+                <div class="media align-items-center pr-lg-4 col-5">
                     <img class="max-width-6 mr-1" th:src="@{/svg/business-icons/iStar_Design_Business_LineIcons_Live-68.svg}" alt="Image Description"/>
                     <div class="media-body">
                         <p class="h4 mb-0">협력사</p>
                     </div>
                 </div>
-                <!-- End Icon Block -->
-                <hr class="my-2 text-blue">
+                <div class="col-7 col-md-2 offset-md-5 text-right">
+                    <select class="form-control form-inline form-control-sm">
+                        <option selected="">거리순</option>
+                        <option>이름순</option>
+                    </select>
+                </div>
             </div>
+            <hr class="my-2">
 
             <div class="card-deck d-block d-lg-flex">
-                <article class="card border-0 mb-2">
-                    <a href="partner" class="text-dark">
-                        <div class="card-body row align-items-stretch no-gutters p-0">
-                            <!-- News Blog Card -->
-                            <div class="col-8 border border-right-0 ">
-                                <h2 class="h6">대리점1</h2>
-                                <address class="mb-0">
-                                    <ul class="list-unstyled font-size-14 text-secondary mb-0">
-                                        <li class="py-1">서울 동대문구 이문동 204-397</li>
-                                        <li class="py-2">취급품목:왕란 대란 소란</li>
-                                        <li class="py-1">(02) 347 8854</li>
-                                    </ul>
-                                </address>
-                            </div>
-                            <div class="col-4 border border-left-0 rounded-right">
-                                <div id="staticMap" class="js-g-map h-100"></div>
+                <article class="card border-0 mb-2 ">
+                    <div class="min-height-pl card-body row align-items-stretch no-gutters p-0">
+                        <div class="col-8 col-sm-9 border border-right-0 rounded-left">
+                            <div class="p-3">
+                                    <span class="d-block">
+                                        <a href="/agent" class="text-dark">
+                                        <strong>왕란상회</strong>
+                                        </a>
+                                    </span>
+                                <div class="small">서울 동대문구 이문동 204-397</div>
+                                <div class="small">02-657-8454</div>
+                                <div class="small text-danger">20km <span class="text-dark">왕란 외 2건</span></div>
                             </div>
                         </div>
-                    </a>
-                    <!-- End News Blog Card -->
+                        <div class="col-4 col-sm-3 card-img-right border border-left-0 bg-img-hero" th:attr="data-bg-img-src=@{/img/test/10_0l.jpg}"></div>
+                    </div>
                 </article>
-                <article class="card border-0 mb-2">
-                    <a href="partner" class="text-dark">
-                        <div class="card-body row align-items-stretch no-gutters p-0">
-                            <!-- News Blog Card -->
-                            <div class="col-8 border border-right-0 ">
-                                <h2 class="h6">대리점1</h2>
-                                <address class="mb-0">
-                                    <ul class="list-unstyled font-size-14 text-secondary mb-0">
-                                        <li class="py-1">서울 동대문구 이문동 204-397</li>
-                                        <li class="py-2">취급품목:왕란 대란 소란</li>
-                                        <li class="py-1">(02) 347 8854</li>
-                                    </ul>
-                                </address>
-                            </div>
-                            <div class="col-4 border border-left-0 rounded-right">
-                                <!--<img class="img-responsive img-thumbnail" src="assets/img/500x550/img4.jpg" alt="Image Description">-->
+                <article class="card border-0 mb-2 ">
+                    <div class="min-height-pl card-body row align-items-stretch no-gutters p-0">
+                        <div class="col-8 col-sm-9 border border-right-0 rounded-left">
+                            <div class="p-3">
+                                    <span class="d-block">
+                                        <a href="/agent" class="text-dark">
+                                        <strong>왕란상회</strong>
+                                        </a>
+                                    </span>
+                                <div class="small">서울 동대문구 이문동 204-397</div>
+                                <div class="small">02-657-8454</div>
+                                <div class="small text-danger">20km <span class="text-dark">왕란 외 2건</span></div>
                             </div>
                         </div>
-                    </a>
-                    <!-- End News Blog Card -->
+                        <div class="col-4 col-sm-3 card-img-right border border-left-0 bg-img-hero" th:attr="data-bg-img-src=@{/img/test/10_0l.jpg}"></div>
+                    </div>
                 </article>
             </div>
+
         </div>
     </main>
 
