--- a/src/main/resources/templates/agentList.html
+++ b/src/main/resources/templates/agentList.html
@@ -9,137 +9,92 @@
             <div class="row">
                 <div class="col-lg-6 mb-7 mb-lg-0">
                     <!-- Contacts Info -->
-                    <h1 class="h4 mb-4">Canada</h1>
-
+                    <h1 class="h4 mb-4">서울 대리점</h1>
                     <div class="row">
                         <div class="col-sm-6 mb-4 mb-sm-0">
-                            <h2 class="h6">Details:</h2>
+                            <h2 class="h6">대리점 정보</h2>
                             <address class="mb-0">
                                 <ul class="list-unstyled font-size-14 text-secondary mb-0">
-                                    <li class="py-1">972 Sylvan Street South Angelina, NL S0B2V9</li>
-                                    <li class="py-2"></li>
-                                    <li class="py-1">+(0161) 347 8854</li>
-                                    <li class="py-1">Email: <a href="#">Space.ca@support.com</a></li>
-                                    <li class="py-1">Website: <a href="#">Space.ca</a></li>
+                                    <li class="py-1">서울 동대문구 이문동 204-397</li>
+                                    <li class="py-1">02-657-8454</li>
                                 </ul>
                             </address>
                         </div>
 
                         <div class="col-sm-6">
-                            <h3 class="h6">Business hours:</h3>
-                            <span class="d-block font-size-14 text-secondary mb-3">Mon - Sat: 9.30AM - 06.00PM</span>
-                            <img class="img-fluid" src="../../assets/img/400x180/img1.jpg" alt="Image Description">
+                            <img class="img-fluid" th:src="@{/img/test/10_0l.jpg}" alt="Image Description">
                         </div>
                     </div>
                     <!-- End Contacts Info -->
                 </div>
-
                 <div class="col-lg-6">
-                    <!-- Google Map -->
-                    <div id="GMap1" class="js-g-map embed-responsive embed-responsive-21by9 h-100"
-                         data-type="custom"
-                         data-lat="40.674"
-                         data-lng="-73.946"
-                         data-zoom="12"
-                         data-title="Agency"
-                         data-styles='[["", "", [{"saturation":-100},{"lightness":51},{"visibility":"simplified"}]], ["", "labels", [{"visibility":"on"}]], ["water", "", [{"color":"#bac6cb"}]] ]'
-                         data-pin="true"
-                         data-pin-icon="../../assets/img/map-markers/map-marker1.png"></div>
-                    <!-- End Google Map -->
+                    <div id="map" class="js-g-map embed-responsive embed-responsive-21by9 h-100"></div>
                 </div>
             </div>
 
-            <hr class="my-9">
+            <hr class="my-4">
 
             <div class="row">
                 <div class="col-lg-6 mb-7 mb-lg-0">
                     <!-- Contacts Info -->
-                    <h3 class="h4 mb-4">United States</h3>
-
+                    <h1 class="h4 mb-4">서울 대리점</h1>
                     <div class="row">
                         <div class="col-sm-6 mb-4 mb-sm-0">
-                            <h4 class="h6">Details:</h4>
+                            <h2 class="h6">대리점 정보</h2>
                             <address class="mb-0">
                                 <ul class="list-unstyled font-size-14 text-secondary mb-0">
-                                    <li class="py-1">728 Dooley Branch, Beckershire, LA 63598-2909</li>
-                                    <li class="py-2"></li>
-                                    <li class="py-1">+(364) 106-7572</li>
-                                    <li class="py-1">Email: <a href="#">Space.com@support.com</a></li>
-                                    <li class="py-1">Website: <a href="#">Space.com</a></li>
+                                    <li class="py-1">서울 동대문구 이문동 204-397</li>
+                                    <li class="py-1">02-657-8454</li>
                                 </ul>
                             </address>
                         </div>
 
                         <div class="col-sm-6">
-                            <h4 class="h6">Business hours:</h4>
-                            <span class="d-block font-size-14 text-secondary mb-3">Mon - Sat: 9.30AM - 06.00PM</span>
-                            <img class="img-fluid" src="../../assets/img/400x180/img2.jpg" alt="Image Description">
+                            <img class="img-fluid" th:src="@{/img/test/10_0l.jpg}" alt="Image Description">
                         </div>
                     </div>
                     <!-- End Contacts Info -->
                 </div>
-
                 <div class="col-lg-6">
-                    <!-- Google Map -->
-                    <div id="GMap2" class="js-g-map embed-responsive embed-responsive-21by9 h-100"
-                         data-type="custom"
-                         data-lat="40.674"
-                         data-lng="-73.946"
-                         data-zoom="12"
-                         data-title="Agency"
-                         data-styles='[["", "", [{"saturation":-100},{"lightness":51},{"visibility":"simplified"}]], ["", "labels", [{"visibility":"on"}]], ["water", "", [{"color":"#bac6cb"}]] ]'
-                         data-pin="true"
-                         data-pin-icon="../../assets/img/map-markers/map-marker1.png"></div>
-                    <!-- End Google Map -->
+                    <div id="map2" class="js-g-map embed-responsive embed-responsive-21by9 h-100"></div>
                 </div>
             </div>
 
-            <hr class="my-9">
-
-            <div class="row">
-                <div class="col-lg-6 mb-7 mb-lg-0">
-                    <!-- Contacts Info -->
-                    <h3 class="h4 mb-4">England</h3>
-
-                    <div class="row">
-                        <div class="col-sm-6 mb-4 mb-sm-0">
-                            <h4 class="h6">Details:</h4>
-                            <address class="mb-0">
-                                <ul class="list-unstyled font-size-14 text-secondary mb-0">
-                                    <li class="py-1">Studio 76d, Riley Ford, North Michaelchester, CF99 6QQ</li>
-                                    <li class="py-2"></li>
-                                    <li class="py-1">+(0117) 900 9463</li>
-                                    <li class="py-1">Email: <a href="#">Space.co@support.com</a></li>
-                                    <li class="py-1">Website: <a href="#">Space.co</a></li>
-                                </ul>
-                            </address>
-                        </div>
-
-                        <div class="col-sm-6">
-                            <h4 class="h6">Business hours:</h4>
-                            <span class="d-block font-size-14 text-secondary mb-3">Mon - Sat: 9.30AM - 06.00PM</span>
-                            <img class="img-fluid" src="../../assets/img/400x180/img3.jpg" alt="Image Description">
-                        </div>
-                    </div>
-                    <!-- End Contacts Info -->
-                </div>
-
-                <div class="col-lg-6">
-                    <!-- Google Map -->
-                    <div id="GMap3" class="js-g-map embed-responsive embed-responsive-21by9 h-100"
-                         data-type="custom"
-                         data-lat="40.674"
-                         data-lng="-73.946"
-                         data-zoom="12"
-                         data-title="Agency"
-                         data-styles='[["", "", [{"saturation":-100},{"lightness":51},{"visibility":"simplified"}]], ["", "labels", [{"visibility":"on"}]], ["water", "", [{"color":"#bac6cb"}]] ]'
-                         data-pin="true"
-                         data-pin-icon="../../assets/img/map-markers/map-marker1.png"></div>
-                    <!-- End Google Map -->
-                </div>
-            </div>
         </div>
         <!-- End Contacts Section -->
     </main>
     <!-- ========== END MAIN CONTENT ========== -->
+
+    <script th:inline="javascript" type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=af40a347c5a17c5118392cee56f35da6&libraries=services"></script>
+    <script th:inline="javascript">
+        /*<![CDATA[*/
+
+        var map_fx="127.05535029999999";
+        var map_fy="37.5863393";
+        var pos = new daum.maps.LatLng(map_fy, map_fx);
+
+        var container = document.getElementById('map'); //지도를 담을 영역의 DOM 레퍼런스
+        var container2 = document.getElementById('map2'); //지도를 담을 영역의 DOM 레퍼런스
+        var options = { //지도를 생성할 때 필요한 기본 옵션
+            center: pos, //지도의 중심좌표.
+            level: 3 //지도의 레벨(확대, 축소 정도)
+        };
+
+        var map = new daum.maps.Map(container, options); //지도 생성 및 객체 리턴\
+        var map2 = new daum.maps.Map(container2, options); //지도 생성 및 객체 리턴\
+
+        // 마커가 표시될 위치입니다
+        var markerPosition  = pos;
+
+        // 마커를 생성합니다
+        var marker = new daum.maps.Marker({
+            position: markerPosition
+        });
+
+        // 마커가 지도 위에 표시되도록 설정합니다
+        marker.setMap(map);
+        marker.setMap(map2);
+
+        /*]]>*/
+    </script>
 </section>
