--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"  layout:decorate="~{layout/default}" >
 <section layout:fragment="content">
-    <p th:text="test"></p>
     <main id="content" role="main">
         <!-- Hero Section -->
         <div class="gradient-overlay-half-dark-v3 bg-img-hero"  th:style="'background-image: url('+@{/img/test/000.jpg}+');'">
@@ -168,7 +167,7 @@
                         <div class="col-8 col-sm-9 border border-right-0 rounded-left">
                             <div class="p-3">
                                     <span class="d-block">
-                                        <a href="/agent" class="text-dark">
+                                        <a href="/agentList" class="text-dark">
                                         <strong>서울 대리점</strong>
                                         </a>
                                     </span>
@@ -185,7 +184,7 @@
                         <div class="col-8 col-sm-9 border border-right-0 rounded-left">
                             <div class="p-3">
                                     <span class="d-block">
-                                        <a href="/agent" class="text-dark">
+                                        <a href="/agentList" class="text-dark">
                                         <strong>서울 대리점</strong>
                                         </a>
                                     </span>
@@ -222,7 +221,7 @@
                         <div class="col-8 col-sm-9 border border-right-0 rounded-left">
                             <div class="p-3">
                                     <span class="d-block">
-                                        <a href="/agent" class="text-dark">
+                                        <a href="/agentList" class="text-dark">
                                         <strong>왕란상회</strong>
                                         </a>
                                     </span>
@@ -239,7 +238,7 @@
                         <div class="col-8 col-sm-9 border border-right-0 rounded-left">
                             <div class="p-3">
                                     <span class="d-block">
-                                        <a href="/agent" class="text-dark">
+                                        <a href="/agentList" class="text-dark">
                                         <strong>왕란상회</strong>
                                         </a>
                                     </span>
@@ -266,18 +265,47 @@
         var pos;
 
         function currentPosition() {
-            if(navigator.geolocation){
-                navigator.geolocation.getCurrentPosition(function (position) {
-                    pos = {
-                        lat:position.coords.latitude,
-                        lng:position.coords.longitude
-                    };
-                    tranceCoordsToAddr(pos);
-                });
-            }else{
-                var locPosition = new daum.maps.LatLng(map_fy, map_fx),
-                    message="일시적으로 내 위치를 확인 할 수 없습니다";
-                alert(message);
+
+            navigator.permissions.query({name: 'geolocation'}).then(function(status) {
+                alert(status);
+            });
+
+
+            if(navigator.geolocation) {
+                navigator.geolocation.getCurrentPosition(
+                    function nowLocation(position) {
+                        pos = {
+                            lat:position.coords.latitude,
+                            lng:position.coords.longitude
+                        };
+                        tranceCoordsToAddr(pos);
+                    },
+                    function(err) {
+                        switch (err.code){
+                            case err.PERMISSION_DENIED:
+                                msg = "위치동의를 거부하였습니다";
+                                break;
+
+                            case err.PERMISSION_UNAVAILABLE:
+                                msg = "지리정보를 얻을 수 없음";
+                                break;
+
+                            case err.TIMEOUT:
+                                msg = "시간초과";
+                                break;
+
+                            case err.UNKNOWN_ERROR:
+                                msg = "알 수 없는 오류 발생";
+                                break;
+                        }
+                        alert(msg);
+
+
+                    }
+                );
+            }
+            else {
+                alert("이 브라우저는 위치정보를 제공하지 않습니다.");
             }
         };
 
