--- a/src/main/resources/templates/regist.html
+++ b/src/main/resources/templates/regist.html
@@ -7,7 +7,6 @@
                   class="js-validate w-lg-75 px-3 px-sm-9 mx-lg-auto form-signin"
                   th:object="${user}">
                 <input type="hidden" id="csrf" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
-                <input type="hidden" id="role" th:name="role" th:value="USER">
                 <!-- Title -->
                 <div class="w-md-80 w-lg-60 text-center mx-md-auto mb-5">
                     <span class="u-label u-label--sm u-label--purple mb-3">join us</span>
@@ -77,7 +76,7 @@
                         <label class="h6 small d-block text-uppercase">핸드폰<span class="text-danger">*</span></label>
                         <div class="js-focus-state input-group form">
                             <input type="tel" class="form-control form__input" required
-                                   th:field="*{tel}"
+                                   th:field="*{mobile}"
                                    placeholder="010-0000-0000"
                                    aria-label="tel"
                                    data-msg="필수입력"
@@ -122,14 +121,14 @@
                                aria-describedby="inputGroup-sizing-default"
                         >
                         <input type="hidden" id="postNum" name="postNum">
-                        <input type="hidden" id="logitude" th:field="*{logitude}">
+                        <input type="hidden" id="logitude" th:field="*{longitude}">
                         <input type="hidden" id="latitude" th:field="*{latitude}">
                     </div>
                     <!--<input type="text" class="form-control" id="sample3_address" th:field="*{address}" />-->
                 </div>
                 <div class="form-group">
                     <label class="h6 small d-block text-uppercase" for="sample3_detailAddress">상세주소</label>
-                    <input type="text" class="form-control" id="sample3_detailAddress" th:field="*{detailAddress}" />
+                    <input type="text" class="form-control" id="sample3_detailAddress" th:field="*{addressDetail}" />
                 </div>
                 <input type="submit" class="btn btn-primary" value="Sign in"/>
             </form>
